--- a/_sass/components/_navbar.scss
+++ b/_sass/components/_navbar.scss
@@ -15,7 +15,7 @@
     text-transform: uppercase;
     color: white;
     border: 0;
-    background-color: $primary;
+    background-color: darken($primary, 8%); // 5.56:1 contrast with white (WCAG AA)
     @include heading-font;
   }
   .navbar-brand {
